<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.widget.MainActivity">

    <item android:title="Operation">
        <menu>
            <item
                android:id="@+id/navigation_msg_center"
                android:icon="@mipmap/ic_mail_white_18dp"
                android:title="@string/msg_center" />
            <item
                android:id="@+id/navigation_personal_center"
                android:icon="@mipmap/ic_home_white_18dp"
                android:title="@string/personal_center" />

            <item
                android:id="@+id/navigation_exit"
                android:icon="@mipmap/ic_highlight_remove_white_18dp"
                android:title="@string/exit_cancel" />
        </menu>
    </item>
</menu>